2023-05-17 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx:
	  Fix whitespace in cross-build configure example.

2023-05-16 Felix Salfelder <felix AT salfelder.org>

	* bin/sd{ar,cpp,nm,objcopy,ranlib}.in:
	  fix #3587 (with Philipp).

2023-05-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCClrange.c,
	  support/regression/tests/bug-3455.c:
	  Fix bug #3455.
	* support/regression/tests/sizeof.c.in:
	  Disable a warning where we intentionally test something that is implementation-defined in SDCC (though undefined in the standard).
	* device/lib/ds400/Makefile.in:
	  Fix invokation of sdar during ds400 library build.

2023-05-15 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/linksrc/Makefile.in,
	  sdas/linksrc/aslink.h,
	  sdas/linksrc/lkout.c,
	  sdas/linksrc/lks19.c:
	  Port Motorola SREC format support from upstream asxxxx 5.40 to fix bug #3559.

2023-05-15 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCsymt.c,
	  support/regression/tests/bug-3585.c:
	  Fix bug #3585.

2023-05-01 Felix Salfelder <felix AT salfelder.org>

	* support/sdbinutils/bfd/{asxxxx,targets}.c:
	  Fix bug #3569 and a memory leak.

2023-05-11 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3352.c,
	  support/regression/tests/bug-3465.c,
	  support/regression/tests/bug-3523.c,
	  support/regression/tests/bug-3532.c,
	  support/regression/tests/bug-3547.c:
	  Disable warning 85 for some tests (as parameters are intentionally unused in these).

2023-05-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3563.c:
	  Regression test for bug #3563 (disabled for mcs51, as the bug is not yet fixed).
	* src/SDCCmem.c,
	  support/regression/tests/*.c:
	  Fix bug #2874.

2023-05-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  support/regression/tests/bug-3579.c:
	  iy handling fixes in code generation.

2023-04-26 Philipp Klaus Krause <philipp@colecovision.eu>
