@@ -184,7 +184,6 @@ static const A3_28* const paa[] = { &a[0], &a[1] };
 
 void test_ptr_array (void)
 {
-#if 0 // Bug #2987
   int i0 = 0;
   int i1 = i0 + 1;
   int i2 = i1 + 1;
@@ -202,7 +201,7 @@ void test_ptr_array (void)
   A ((*pa0)[i1] + i2, 1);
   A ((*pa0)[i2] + i3, 2);
 
-
+#if !defined( __SDCC_pdk14) && !defined( __SDCC_pdk15) // Lack of memory
   A (*((*pa1) + i0), 7);
   A (*((*pa1) + i1), 9);
   A (*((*pa1) + i2), 11);
@@ -222,7 +221,7 @@ void test_ptr_array (void)
   A (*(*(paa[1]) + i0), 7);
   A (*(*(paa[1]) + i1), 9);
   A (*(*(paa[1]) + i2), 11);
-
+#if 0 // Bug #2987
   A (*(*(paa[1]) - i1), 5);
   A (*(*(paa[1]) - i2), 3);
   A (*(*(paa[1]) - i3), 1);
@@ -230,6 +229,7 @@ void test_ptr_array (void)
   A (*(*(paa[0]) + i0) + i1, 0);
   A (*(*(paa[0]) + i1) + i2, 1);
   A (*(*(paa[0]) + i2) + i3, 2);
+#endif
 #endif
 }
 
